<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="15dp"
    tools:context=".activity._OldCreateGridActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="8dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/tag"
                android:layout_weight="0.8">

                <ImageView
                    android:id="@+id/iv_color"
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/tag_name_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/tag_name"
                    android:inputType="textPersonName"
                    android:maxHeight="400dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto"
                    tools:layout_editor_absoluteX="116dp"
                    tools:layout_editor_absoluteY="58dp" />
            </LinearLayout>


            <Spinner
                android:id="@+id/colorSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@drawable/style_button_white"
                android:layout_marginStart="16dp"
                android:layout_weight="0.2"/>

            <Button
                android:id="@+id/add_tag_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/style_button"
                android:text="@string/add_tag"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="449dp"
                tools:layout_editor_absoluteY="50dp"
                android:layout_weight="0.2"/>

        </LinearLayout>



        <android.support.v7.widget.RecyclerView

            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/end_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:text="@string/end"
            android:textColor="@color/black_de"
            android:textSize="16sp"
            android:background="@drawable/style_button_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>