...
    android:layout_height="match_parent"
    tools:context="fr.vyfe.fragment.CreateGridFragment">



        <LinearLayout
            android:id="@+id/ll_import_grid2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
...
                        android:text="@string/grid_title"
                        android:textColor="@color/colorWhiteTwo"
                        android:textSize="20sp"
                        app:fontFamily="@font/roboto" />

                    <EditText
                        android:id="@+id/grid_title_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/style_input"
                        android:ems="10"
                        android:hint="@string/ex_posture"
                        android:inputType="textPersonName"
...
